# ChangeLog for dev-qt/qtphonon
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtphonon/ChangeLog,v 1.12 2015/05/15 12:56:10 zlogene Exp $

  15 May 2015; Mikle Kolyada <zlogene@gentoo.org> qtphonon-4.8.6-r1.ebuild:
  x86 stable wrt bug #530238

  11 May 2015; Mikle Kolyada <zlogene@gentoo.org> qtphonon-4.8.6-r1.ebuild:
  amd64 stable wrt bug #530238

  08 Jan 2015; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Update upstream bugtracker URL.

*qtphonon-4.8.6-r1 (15 Nov 2014)

  15 Nov 2014; Davide Pesavento <pesa@gentoo.org> +qtphonon-4.8.6-r1.ebuild,
  metadata.xml, qtphonon-4.8.5.ebuild:
  Version bump (bug 510042). Add multilib support (bug 498010).

  26 Jan 2014; Davide Pesavento <pesa@gentoo.org> -qtphonon-4.8.4.ebuild,
  metadata.xml:
  Cleanup.

  11 Nov 2013; Jeroen Roovers <jer@gentoo.org> qtphonon-4.8.5.ebuild:
  Stable for HPPA (bug #488536).

  07 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtphonon-4.8.5.ebuild:
  Stable for arm, wrt bug #488536

  05 Nov 2013; Lars Wendler <polynomial-c@gentoo.org> qtphonon-4.8.5.ebuild:
  Stable for ppc and ppc64 as per bug #488536 as per request from ago.

  03 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtphonon-4.8.5.ebuild:
  Stable for x86, wrt bug #488536

  03 Nov 2013; Agostino Sarubbo <ago@gentoo.org> qtphonon-4.8.5.ebuild:
  Stable for amd64, wrt bug #488536

*qtphonon-4.8.5 (09 Jul 2013)

  09 Jul 2013; Davide Pesavento <pesa@gentoo.org> +qtphonon-4.8.5.ebuild:
  Version bump.

  31 Dec 2012; Davide Pesavento <pesa@gentoo.org> metadata.xml:
  Cleanup metadata.

  29 Dec 2012; Michael Palimaka <kensington@gentoo.org>
  -files/4.8.2-qatomic-x32.patch, -qt-phonon-4.7.4.ebuild,
  -qt-phonon-4.8.1.ebuild, -qt-phonon-4.8.2.ebuild, -qt-phonon-4.8.3.ebuild:
  Remove old.

  25 Dec 2012; Agostino Sarubbo <ago@gentoo.org> qt-phonon-4.8.4.ebuild:
  Stable for arm, wrt bug #445956
