@@ -1,6 +1,9 @@
 # ChangeLog for dev-qt/qtphonon
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtphonon/ChangeLog,v 1.12 2015/05/15 12:56:10 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-qt/qtphonon/ChangeLog,v 1.13 2015/05/16 09:59:42 jer Exp $
+
+  16 May 2015; Jeroen Roovers <jer@gentoo.org> qtphonon-4.8.6-r1.ebuild:
+  Stable for HPPA PPC64 (bug #530238).
 
   15 May 2015; Mikle Kolyada <zlogene@gentoo.org> qtphonon-4.8.6-r1.ebuild:
   x86 stable wrt bug #530238
